--- a/style.css
+++ b/style.css
@@ -1,60 +1,145 @@
 * {
-    padding: 0em;
-    margin: 0em;
+	padding: 0em;
+	margin: 0em;
 }
 
 :root {
-    --bgcolor: #0365AE;
-    --txtcolor: white;
-    --breadcolor: #00163F;
-    --newscolor: #0365AE;
-    --newtxtcolor: #000000;
-    --contentxtcolor: #000000;
-    --contentbgcolur: white;
-    --linkcolor: white;
-    --visitedcolor: #F3C4B2;
+	--bgcolor: #0365AE;
+	--txtcolor: #fff;
+	--breadcolor: #163f77;
+	--newscolor: #F3C42B;
+	--newstxtcolor: #000;
+	--contentxtcolor: #000;
+	--contentbgcolor: #fff;
+	--linkcolor: #fff;
+	--visitedcolor: #F3C42B;
 }
 
 html, body {
-    font-size: 100%;
-    font-family: "Verdana", sans-serif;
-    line-height: 1.5em;
-    margin: auto;
-    
-    
+	font-size: 100%;
+	font-family: "Verdana", sans-serif;
+	line-height: 1.5em;
+	background-color: var(--bgcolor);
+	color: var(--txtcolor);
+	margin: auto;
 }
+
 html {
-    background-image: url(images/bg.png);
-    background-size: contain;
+	background-image: url('images/bg.png');
+	background-size: cover;
     background-repeat: no-repeat;
-    
 }
+
 body {
-    max-width: 1024px;
-    background-color: blue;
+	max-width: 1024px;
+	border: 1px solid #000;
 }
 
 header {
-    max-width: 1024px;
-   
+    color: var(--txtcolor);
+    text-align: center;
+    padding: 1em;
+    padding-top: 0.7em;
+    background:
+        url(./images/giannellipalleggio.jpg) no-repeat bottom right,
+        url(./images/michielettocoppa.jpg) no-repeat top left;
+    background-size: 20%, 20%;
+    margin: 0.7em;
 }
+
+header h1 {
+    background-image: url('images/logo_fipav.svg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    text-indent: -9999px;
+    line-height: 1.5em;
+    font-size: 6em;
+}
+
+header h2 {
+	font-size: 1.8em;
+	padding: 0.5em;
+	margin-top: 0.3em;
+}
+
 #breadcrumb {
-    background-color: var(--breadcolor);
-
+	background-color: var(--breadcolor);
+	color: var(--txtcolor);
+	font-size: 1.1em;
+	padding: 0.5em 0em 0.5em 1.0em;
+	border: 1px solid #000;
 }
+
+#breadcrumb a:link {
+	color: var(--linkcolor);
+}
+
+#breadcrumb a:visited {
+	color: var(--visitedcolor);
+}
+
 #menu {
-    float: left;
-    background-color: var(--linkcolor);
+	float: left;
+	width: 25%;
+	font-size: 1.3em;
+	padding: 0.8em;
 }
 
-aside h2 {
-    background-color:var(--newscolor);
+#menu a:link {
+	color: var(--linkcolor);
+}
+
+#menu a:visited {
+	color: var(--visitedcolor);
+}
+
+#menu ul {
+	list-style-type: none;
+}
+
+#menu ul li {
+	margin-top: 0.5em;
 }
 
 aside {
-    float: right;
+	float: right;
+	width: 20%;
+	border: 1px solid #000;
+	padding: 0.5em;
+	margin-top: 1.0em;
+	margin-right: 2%;
+	margin-left: 3%;
+	overflow: hidden;
+	background-color: var(--bgcolor);
+	color: var(--txtcolor);
 }
 
+aside h2 {
+	font-size: 1.2em;
+	background-color: var(--newscolor);
+	color: var(--newstxtcolor);
+	padding: 0.2em;
+}
+
+aside dl dd {
+	margin-left: 1.5em;
+}
+
+aside dt {
+	margin-left: 0.8em;
+	font-weight: bold;
+}
+
+main {
+	margin-left: 28%;
+	color: var(--contentxtcolor);
+ 	background-color: var(--contentbgcolor);
+ 	
+ }
+
 footer {
-    background-color: var(--breadcolor);
+	background-color: var(--breadcolor);
+	color: var(--txtcolor);
 }
