Modifiche al footer

--- a/style.css
+++ b/style.css
@@ -103,6 +103,15 @@ header h2 {
 	margin-top: 0.5em;
 }
 
+#currentlink {
+    color: var(--txtcolor);
+    padding-left: 1.5em;
+    background-image: url('images/favpng_volleyball-icon.png');
+    background-repeat: no-repeat;
+    background-size: 1.2em;
+    background-position-y: center;
+}
+
 aside {
 	float: right;
 	width: 20%;
@@ -137,9 +146,29 @@ main {
 	color: var(--contentxtcolor);
  	background-color: var(--contentbgcolor);
  	
- }
+}
 
 footer {
-	background-color: var(--breadcolor);
-	color: var(--txtcolor);
+    color: var(--txtcolor);
+    background-color: var(--breadcolor);
+    text-align: center;
+
+    padding-top: 0.5em;
+
+    border-style: solid;
+    border-width: 0.15em;
+    border-color: var(--bordercolor);
+    border-bottom: 0em;
+    border-right: 0em;
+    border-left: 0em;
+}
+
+footer em {
+    display: inline;
+    font-style: italic;
+    font-size: 0.8em;
+}
+
+footer img {
+    margin: 0em 1em;
 }
